Fix minor layout bugs in icon_button

--- a/web/htdocs/wato.css
+++ b/web/htdocs/wato.css
@@ -331,8 +331,8 @@ table.validationerror img {
 }
 
 .wato img.trans {
-    width: 23px;
-    height: 16px;
+    width: 20px;
+    height: 13px;
 }
 .wato td.value img {
     width: 20px;
